# ier

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs-pages.yml  docs.yml  lint.yml  python-publish.yml  release.yml  security.yml  version-check.yml  veto.yml
benchmarks/: bench_screen.py
docs/: api.md  getting-started.md  index.md  indices.md  r-comparison.md  thresholds.md
docs/workflows/: composite.md  screening.md
examples/: basic_screening.py  careless_responding_walkthrough.py  composite_scoring.py
scripts/: check.sh
src/ier/: __init__.py  _flagging.py  _optional_imports.py  _registry.py  _validation.py  acquiescence.py  cli.py  composite.py  longstring.py  lz.py  mad.py  mahad.py  markov.py  psychsyn.py  response_time.py  screen.py  semantic.py  types.py  visualize.py
tests/: test_cli.py  test_composite.py  test_core_indices.py  test_golden_parity.py  test_new_functions.py  test_properties.py  test_property_invariants.py  test_response_time.py  test_screen.py  test_screening_workflow.py  test_specialized_indices.py  unit.py
