[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insufficient-effort"
version = "1.6.2"
authors = [{ name = "Cameron Lyons", email = "cameron.lyons2@gmail.com" }]
description = "Python library for detecting Insufficient Effort Responding (IER) in survey data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26.0,<2.4"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
full = ["scipy>=1.11.0,<1.17"]
plot = ["matplotlib>=3.8.0,<4"]
dev = [
    "scipy>=1.16.3,<1.17",
    "scipy-stubs>=1.16.3,<1.18",
    "matplotlib>=3.8.0,<4",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.0.0,<8",
    "mypy>=1.19.0,<2",
    "ruff>=0.14.0,<1",
    "pylint>=4.0.0,<5",
    "bandit>=1.9.0,<2",
    "pip-audit>=2.9.0,<3",
    "hypothesis>=6.150.0,<7",
    "pre-commit>=4.0.0,<5",
    "pillow>=12.2.0,<13",
    "pygments>=2.20.0,<3",
    "requests>=2.33.0,<3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ier = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/Cameron-Lyons/ier"
"Bug Tracker" = "https://github.com/Cameron-Lyons/ier/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -Werror"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/ier"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["ier"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
